--- a/flask_app/templates/gallery.html
+++ b/flask_app/templates/gallery.html
@@ -13,6 +13,7 @@
 
 <body>
     <!--burger navbar-->
+    <!-- we are going to get rid of you -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary ">
         <div class="container justify-content-between">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
