--- a/flask_app/templates/contact.html
+++ b/flask_app/templates/contact.html
@@ -12,6 +12,30 @@
 </head>
 
 <body>
+         <!-- cans r us logo header w/social-->
+         <div class="header">
+            <div class="header_container">
+                <div class="logo_container">
+                    <div class="logo navbar-brand">
+                        <a href="">
+                            <img class="logo" src="\static\imgs\cans-r-us-llc_FullColor_Logo.png" class="img-responsive" alt="CANS R US, LLC | Portable Toilets, Handicap Units, Handwash Stations - We'll take care of YOUR business">
+                        </a>
+                    </div>
+                </div>
+                <!-- <div class="social_container">
+                    <div class="social">
+                        <a class="email_img" href="mailto:greg@cansrusLLC.com">
+                            <img src="\static\imgs\mail.png" alt="email icon image">
+                        </a>
+                        <a class="location_img" href="https://goo.gl/maps/8EXjbuJDmLUvk7nMA">
+                            <img src="\static\imgs\location.png" alt="location icon image">
+                        </a>
+                        <h6><a  class="link" style="font-size:large" href="/contact" alt="contact page link">Contact us</a> for a quote today!</h6>
+                    </div>
+                </div> -->
+            </div>
+        </div>
+
     <!--burger navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary ">
         <div class="container justify-content-between">
@@ -28,12 +52,12 @@
                     <li class="nav-item">
                         <a class="nav-link mx-5 underlineAnimate" href="/services">Services</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link ms-5 underlineAnimate" href="/products">Products</a>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link mx-5 underlineAnimate" href="/products">Products</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-5 underlineAnimate" href="/gallery">Gallery</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link active mx-5 underlineAnimate" aria-current="page" href="">Contact Us/Get Quote</a>
                     </li>
@@ -74,7 +98,7 @@
         <div class="container d-flex justify-content-between">
             <div>
                 &copy; 2023 - CANS R US, LLC
-                <a href="/private">Private Policy</a>
+                <a href="/private">Privacy Policy</a>
             </div>
         </div>
     </footer>
