--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -31,7 +31,7 @@
                     <a class="location_img" href="https://goo.gl/maps/8EXjbuJDmLUvk7nMA">
                         <img src="\static\imgs\location.png" alt="location icon image">
                     </a>
-                    <h5>Contact us for a quote today!</h5>
+                    <h6><a  class="link" style="font-size:large" href="/contact" alt="contact page link">Contact us</a> for a quote today!</h6>
                 </div>
             </div>
         </div>
@@ -55,12 +55,12 @@
                     <li class="nav-item">
                         <a class="nav-link mx-5 underlineAnimate" href="/services">Services</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link ms-5 underlineAnimate" href="/products">Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link ms-5 underlineAnimate" href="/gallery">Gallery</a>
-                    </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link mx-5 underlineAnimate" href="/products">Products</a>
+                    </li> -->
+                    <!-- <li class="nav-item">
+                        <a class="nav-link mx-5 underlineAnimate" href="/gallery">Gallery</a>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link mx-5 underlineAnimate" href="/contact">Contact Us/Get Quote</a>
                     </li>
@@ -84,20 +84,25 @@
 
         <!-- main page row of service links w/imgs -->
         <div class="main_services_row">
-            <!-- need to edit this link to the # content once that is added!!!!!!! -->
-            <a class="imgs_row" href="/products">
+            <a class="imgs_row" href="/services#standard">
                 <img class="img_in_row img_responsive" src="\static\imgs\feature-unit-rental.jpg" alt="Porta Pottys in a row. Portable toilets rental">
-                <div class="img_in_row_text">Portable Toilet Rental</div>
+                <div class="img_in_row_text">Standard Toilet Rentals</div>
             </a>
-            <!-- need to edit this link to the # content once that is added!!!!!!! -->
-            <a class="imgs_row" href="/products">
+            <a class="imgs_row" href="/services#ADA">
+                <img class="img_in_row img_responsive" src="\static\imgs\feature-unit-rental.jpg" alt="Porta Pottys in a row. Portable toilets rental">
+                <div class="img_in_row_text">Wheelchair/ADA Rentals</div>
+            </a>
+            <a class="imgs_row" href="/services#handwashing">
                 <img class="img_in_row img_responsive" src="\static\imgs\feature-handwash-stations.jpg" alt="Hand washing stations. Handwashing stations rental">
                 <div class="img_in_row_text">Handwashing Stations</div>
             </a>
-            <!-- need to edit this link to the # content once that is added!!!!!!! -->
-            <a class="imgs_row" href="/products">
+            <a class="imgs_row" href="/services#servicing">
                 <img class="img_in_row img_responsive" src="\static\imgs\feature-servicing.jpg" alt="Pump truck. Rental toilet servicing">
-                <div class="img_in_row_text">Toilet Servicing</div>
+                <div class="img_in_row_text">Private Toilet Servicing</div>
+            </a>
+            <a class="imgs_row" href="/services#camper">
+                <img class="img_in_row img_responsive" src="\static\imgs\feature-servicing.jpg" alt="Pump truck. Rental toilet servicing">
+                <div class="img_in_row_text">Camper/RV Servicing</div>
             </a>
         </div>
 
@@ -127,7 +132,7 @@
                             <br>
                             Monday - Friday: 7am - 5pm
                             <br>
-                            Sunday: Please Call 
+                            Saturday & Sunday: Please Call 
                         </p>
                     </div>
                     <div class="certifications">
@@ -145,9 +150,9 @@
 
                     <!-- actual main content area on main page ------------------->
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 main_content">
-                        <h1>CANS R US, LLC... Central Minnesota's Leading Portable Toilet Rental Company
+                        <h1><center>CANS R US, LLC... Central Minnesota's Leading Portable Toilet Rental Company</center>
                         </h1>                        
-                        <h2>Taking Care of Your Business in the Most Sanitary Ways Possible</h2>
+                        <h2 style="font-size: large;"><center>Taking Care of Your Business in the Most Sanitary Ways Possible</center></h2>
                         <br>
                         <p>End your portable toilet rental search with CANS R US, LLC! Our Central Minnesota based portable toilet rental 
                             company rents portable restrooms (porta potties), handwash stations, and other sanitary solutions for weddings, 
