--- a/flask_app/templates/services.html
+++ b/flask_app/templates/services.html
@@ -12,6 +12,31 @@
 </head>
 
 <body>
+     <!-- cans r us logo header w/social-->
+     <div class="header">
+        <div class="header_container">
+            <div class="logo_container">
+                <div class="logo navbar-brand">
+                    <a href="">
+                        <img class="logo" src="\static\imgs\cans-r-us-llc_FullColor_Logo.png" class="img-responsive" alt="CANS R US, LLC | Portable Toilets, Handicap Units, Handwash Stations - We'll take care of YOUR business">
+                    </a>
+                </div>
+            </div>
+            <div class="social_container">
+                <div class="social">
+                    <!-- email needs to be fixed!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+                    <a class="email_img" href="mailto:greg@cansrusLLC.com">
+                        <img src="\static\imgs\mail.png" alt="email icon image">
+                    </a>
+                    <a class="location_img" href="https://goo.gl/maps/8EXjbuJDmLUvk7nMA">
+                        <img src="\static\imgs\location.png" alt="location icon image">
+                    </a>
+                    <h6><a  class="link" style="font-size:large" href="/contact" alt="contact page link">Contact us</a> for a quote today!</h6>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end header !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
     <!--burger navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary ">
         <div class="container justify-content-between">
@@ -28,12 +53,12 @@
                     <li class="nav-item">
                         <a class="nav-link active mx-5 underlineAnimate" aria-current="page" href="">Services</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link ms-5 underlineAnimate" href="/products">Products</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link ms-5 underlineAnimate" href="/gallery">Gallery</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link mx-5 underlineAnimate" href="/contact">Contact Us/Get Quote</a>
                     </li>
@@ -43,8 +68,8 @@
     </nav>
 
     <div class="container">
-        <!-- main page top image  -->
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <!-- page top image  -->
+        <!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="main_img">
                 <img class="img-responsive header_img" src="\static\imgs\header2.jpg" alt="row of portable toilets for rent supplied by Cans R Us for a community event" >
                 <p class="img_quote">
@@ -53,102 +78,175 @@
                     Exceeding Your Expectations, Guaranteed!
                 </p>
             </div>
-        </div>
+        </div> -->
+
 
         <!-- main page row of service links w/imgs -->
-        <div class="main_services_row">
-            <!-- need to edit this link to the # content once that is added!!!!!!! -->
-            <a class="imgs_row" href="/products">
+        <div class="main_services_row mt-3">
+            <a class="imgs_row" href="/services#standard">
                 <img class="img_in_row img_responsive" src="\static\imgs\feature-unit-rental.jpg" alt="Porta Pottys in a row. Portable toilets rental">
-                <div class="img_in_row_text">Portable Toilet Rental</div>
+                <div class="img_in_row_text">Standard Toilet Rentals</div>
             </a>
-            <!-- need to edit this link to the # content once that is added!!!!!!! -->
-            <a class="imgs_row" href="/products">
+            <a class="imgs_row" href="/services#ADA">
+                <img class="img_in_row img_responsive" src="\static\imgs\feature-unit-rental.jpg" alt="Porta Pottys in a row. Portable toilets rental">
+                <div class="img_in_row_text">Wheelchair/ADA Rentals</div>
+            </a>
+            <a class="imgs_row" href="/services#handwashing">
                 <img class="img_in_row img_responsive" src="\static\imgs\feature-handwash-stations.jpg" alt="Hand washing stations. Handwashing stations rental">
                 <div class="img_in_row_text">Handwashing Stations</div>
             </a>
-            <!-- need to edit this link to the # content once that is added!!!!!!! -->
-            <a class="imgs_row" href="/products">
+            <a class="imgs_row" href="/services#servicing">
                 <img class="img_in_row img_responsive" src="\static\imgs\feature-servicing.jpg" alt="Pump truck. Rental toilet servicing">
-                <div class="img_in_row_text">Toilet Servicing</div>
+                <div class="img_in_row_text">Private Toilet Servicing</div>
+            </a>
+            <a class="imgs_row" href="/services#camper">
+                <img class="img_in_row img_responsive" src="\static\imgs\feature-servicing.jpg" alt="Pump truck. Rental toilet servicing">
+                <div class="img_in_row_text">Camper/RV Servicing</div>
             </a>
         </div>
 
         <!--  page content ------------------------------------ -->
         <div class="container">
-                <div class="row main_page_content">
-                    <!-- semi side bar area on page ---------------- -->
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 main_side">
-                        <div class="our_services">
+            <div class="row services_page_content">
 
-                        <h1>Our Porta-Potty Services</h1>
-                        <div class="column_of_buttons">
-                            <a href="#portable_toilet_rentals">
-                                <button class="btn">Portable Toilet Rentals</button>
-                            </a>
-                            <a href="#servicing_of_privately_owned_units">
-                                <button class="btn">Servicing of Privately Owned Units</button>
-                            </a>
-                            <a href="pumping_of_camper_rv_holding_tanks">
-                                <button class="btn">Pumping of Camper & RV Holding Tanks</button>
-                            </a>
-                            <a href="electric_lighting_heaters_available">
-                                <button class="btn">Electric Lighting & Heaters Available</button>
-                            </a>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 services_contact">
+                    <h1>Contact Us</h1>
+                    <p>
+                        <strong>CANS R US, LLC</strong>
+                        <br>
+                        11575 230th Ave
+                        <br>
+                        Pierz, MN 56364
+                    </p>
+
+                    <p>
+                        <strong>Phone:</strong> 320.547.2478
+                        <br>
+                        <strong>Email:</strong> <a class="link" href="mailto:greg@cansrusllc.com">greg@cansrusllc.com</a>
+                    </p>
+
+                    <p>
+                        <strong>Hours:</strong>
+                        <br>
+                        Monday - Friday: 7am - 5pm
+                        <br>
+                        Saturday & Sunday: Please Call 
+                    </p>
+                </div>
+                    
+                    <!-- actual main content area on page ------------------->
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 services_content">
+                    <h1>Portable Toilet Rentals & Related Sanitation Services </h1>                        
+                    <br>
+                        <p>At Cans R Us in Central Minnesota we maintain modern sanitary facilities, each available to meet the demands of a variety of uses. Our portable toilets and related products are inherently rugged, designed to be as sanitary as possible, and come equipped with additional features to meet your needs. From construction sites and house parties, to town festivals and outdoor weddings, we have the mobile sanitary facilities suitable for any situation.</p>
+                        <br><br>
+
+                </div>
+            </div>
+                            <!-- <h2>Portable Toilet Rentals</h2>
+                            <br><br> -->
+            <div class="row services_page_content">
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 services_content">
+                    <h2 id="standard">Standard Portable Toilet Units</h2>
+                    <br>
+                        <p>Our standard Porta Potties are suitable for most temporary restroom needs and come equipped with necessary sanitary and safety features to provide added value.                                    </p>
+                    <h4>Features Include:</h4>
+                        <div class="row">
+                            <ul class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                                <li>A Hand Sanitizer Dispenser In Each Unit</li>
+                                <li>Translucent Roofs to Allow as Much Light as Possible</li>
+                                <li>Anti-Slip Flooring</li>
+                            </ul>
+                            <ul class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                                <li>Stocked Toilet Paper & Hand Sanitizer</li>
+                                <li>Easily Readable 'Available' & 'In-Use' Indicators</li>
+                                <li>Lighting Available</li>
+                            </ul>
                         </div>
 
-                    </div>
-                    <div class="main_contact">
-                        <h1>Contact Us</h1>
-                        <p>
-                            <strong>CANS R US, LLC</strong>
-                            <br>
-                            11575 230th Ave
-                            <br>
-                            Pierz, MN 56364
-                        </p>
+                    <p>At Cans R Us we own and maintain a growing number of portable rental toilets and have plenty available for your next event or party. <a  class="link"  href="/contact" alt="contact page link">Contact us</a> to arrange delivery or to receive a quote.</p>
+                    <br>
+                </div>
 
-                        <p>
-                            <strong>Phone:</strong> 320.547.2478
-                            <br>
-                            <strong>Email:</strong> <a class="link" href="mailto:greg@cansrusllc.com">greg@cansrusllc.com</a>
-                        </p>
-
-                        <p>
-                            <strong>Hours:</strong>
-                            <br>
-                            Monday - Friday: 7am - 5pm
-                            <br>
-                            Sunday: Please Call 
-                        </p>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    immmaa porta potty picture
+                </div>
+            </div>
+            
+            <div class="row services_page_content">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    immmaa porta potty picture
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 services_content">
+                    <h2 id="ADA">Wheelchair / ADA Portable Toilet Units</h2>
+                    <br>
+                    <p>Our Wheelchair Accessible Models meet American Disability Association (ADA) portable toilet guidelines. Designed specifically with wheelchair users in mind, our ADA Toilet Models are the largest portable restroom units we carry. Everything about these portable sanitary units is designed for easy accessibility:</p>
+                    <div class="row">
+                        <ul class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                            <li>Roll-In Ground Level Access</li>
+                            <li>Interior Handrails</li>
+                            <li>An Oversized, Self-Closing Door</li>
+                            <li>Spacious Interior</li>
+                        </ul>
+                        <ul class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                            <li>Hand Sanitizer Dispenser</li>
+                            <li>Fully Stocked Toilet Paper & Hand Sanitizer</li>
+                            <li>Lighting Available</li>
+                        </ul>
                     </div>
+
+                    <p>At Cans R Us, our servicing of a privately owned toilet unit includes: A thorough cleaning of the unit using a sanitary rinse and freshwater spray hose, along with pumping and cleaning the tank. We then setup the tank with new chemicals (which break down the waste) and water, and spray a quick-drying disinfectant inside the entire unit. <a  class="link"  href="/contact" alt="contact page link">Contact us</a> to arrange delivery or to receive a quote.</p></p>
+                    <br>
+                </div>
+            </div>
+                            
+            <div class="row services_page_content">
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 services_content">
+                    <h2 id="handwashing">Portable Handwashing Stations</h2>
+                    <br>
+                    <p>When it comes to hand washing, it’s about having safe, usable water and sanitizing soap. At CANS R US, LLC our full handwashing stations deliver on all of the above. Our portable handwash set-ups provide added comfort and are an extended sanitation option for any event.</p>
+                    <h4>Features Include:</h4>
+                    <ul>
+                        <li>Completely Contained Fresh & Gray Water Right Within the Unit</li>
+                        <li>Water Capacity: 43 Gallon Fresh Water</li>
+                        <li>Estimated 600+ Uses Without Refilling</li>
+                        <li>Soap & Paper Towel Dispensers Included (Full Stocked Prior to Delivery)</li>
+                    </ul>
+                    <p>Our Handwashing Set-Ups can be accompanied with our Standard Units, our ADA Units or as stand-alone stations.  <a  class="link"  href="/contact" alt="contact page link">Contact us</a> with questions or to request a quote.</p>
+                    <br>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    immmaa porta potty picture
+                </div>
+            </div>
+
+            <div class="row services_page_content">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    immmaa porta potty picture
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 services_content">
+                    <h2 id="servicing">Servicing of Privately Owned Toilet Units</h2>
+                    <br>
+                    <p>Many individuals own a private portable toilet, as they work perfect for lake cabins, hunting shacks or in areas that do not have adequate septic plumbing. The downfall, maintaining your portable toilet; this is where we come in. At Cans R Us we offer servicing of your privately owned porta-potty... it's just another way that "We'll take care of YOUR business!"</p>
+                    <p>At Cans R Us, our servicing of a privately owned toilet unit includes: A thorough cleaning of the unit using a sanitary rinse and freshwater spray hose, along with pumping and cleaning the tank. We then setup the tank with new chemicals (which break down the waste) and water, and spray a quick-drying disinfectant inside the entire unit. <a  class="link"  href="/contact" alt="contact page link">Contact us</a> with questions or to request a quote.</p></p>
+                    <br>
+                </div>
+            </div>
+
+            <div class="row services_page_content">
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 services_content">
                     
+                    <h2 id="camper">Pumping of Camper & RV Holding Tanks</h2>
+                    <br>
+                    <p>Based in Central Minnesota we recognize that many area residents camp, for many it’s an integral part of their summers. Unfortunately it often comes with the not-so-fun task of empting the camper holding tank. Fortunately, with Cans R Us, there’s no need to visit a dump station or take-on that task on your own. That's right, our certified pump trucks and haulers will come to you and provide the convenient tank pumping services you need.
+                        
+                        <p>In a short length of time we can pump your camper or RV’s holding tanks, emptying both black and gray water tanks. We can also provide any additional sanitization services that may be needed. Continue camping or bring the camper straight home, either way we can do the on-site pumping work for you. <a  class="link"  href="/contact" alt="contact page link">Contact us</a> with questions or to request a quote.</p></p></p> 
                 </div>
-
-                    <!-- actual main content area on page ------------------->
-                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 main_content">
-                        <h1>Portable Toilet Rentals & Related Sanitation Services </h1>                        
-                        <br>
-                        <p>Whether you call them rental toilets, porta Johns, porta-potties, portable restrooms, portable toilets, outdoor portable bathrooms, biffys or some other term, CANS R US, LLC can rent them, deliver them and clean them for your next event or worksite.
-
-                            <br><br>
-                            <!-- need to add links to "standard" and "ada units" -->
-                            With over 25 years of experience, we are experts in rental toilets. Offering Standard and Wheelchair ADA Units, we are continually upgrading our models and deliver anywhere in Central MN. But it doesn't just end with delivery, our portable toilet rentals come pristinely clean, fully stocked, and are accompanied with professional servicing if needed.
-
-                            <br><br>
-
-                            <h2>Portable Toilet Rentals</h2>
-                            <br><br>
-
-
-                            <h2>Servicing of Privately Owned Toilet Units</h2>
-                            <br><br>
-
-                            <h2>Pumping of Camper & RV Holding Tanks</h2>
-                            <br><br>
-                        </p>
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                        immmaa porta potty picture
                     </div>
-                </div>
+            </div>
         </div>
 
     </div>
@@ -157,7 +255,7 @@
         <div class="container d-flex justify-content-between">
             <div>
                 &copy; 2023 - CANS R US, LLC
-                <a href="/private">Private Policy</a>
+                <a href="/private">Privacy Policy</a>
             </div>
         </div>
     </footer>
