--- a/flask_app/templates/gallery.html
+++ b/flask_app/templates/gallery.html
@@ -30,7 +30,7 @@
                         <a class="nav-link mx-5 underlineAnimate" href="/services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ms-5 underlineAnimate" href="/products">Products</a>
+                        <a class="nav-link mx-5 underlineAnimate" href="/products">Products</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active mx-5 underlineAnimate" aria-current="page" href="">Gallery</a>
