--- a/flask_app/templates/contact.html
+++ b/flask_app/templates/contact.html
@@ -12,29 +12,31 @@
 </head>
 
 <body>
-         <!-- cans r us logo header w/social-->
-         <div class="header">
-            <div class="header_container">
-                <div class="logo_container">
-                    <div class="logo navbar-brand">
-                        <a href="">
-                            <img class="logo" src="\static\imgs\cans-r-us-llc_FullColor_Logo.png" class="img-responsive" alt="CANS R US, LLC | Portable Toilets, Handicap Units, Handwash Stations - We'll take care of YOUR business">
-                        </a>
-                    </div>
+    <!-- cans r us logo header w/social-->
+    <div class="header">
+        <div class="header_container">
+            <div class="logo_container">
+                <div class="logo navbar-brand">
+                    <a href="">
+                        <img class="logo" src="\static\imgs\cans-r-us-llc_FullColor_Logo.png" class="img-responsive"
+                            alt="CANS R US, LLC | Portable Toilets, Handicap Units, Handwash Stations - We'll take care of YOUR business">
+                    </a>
                 </div>
-                <!-- <div class="social_container">
-                    <div class="social">
-                        <a class="email_img" href="mailto:greg@cansrusLLC.com">
-                            <img src="\static\imgs\mail.png" alt="email icon image">
-                        </a>
-                        <a class="location_img" href="https://goo.gl/maps/8EXjbuJDmLUvk7nMA">
-                            <img src="\static\imgs\location.png" alt="location icon image">
-                        </a>
-                        <h6><a  class="link" style="font-size:large" href="/contact" alt="contact page link">Contact us</a> for a quote today!</h6>
-                    </div>
-                </div> -->
+            </div>
+            <div class="social_container">
+                <div class="social">
+                    <a class="email_img" href="mailto:greg@cansrusLLC.com">
+                        <img src="\static\imgs\mail.png" alt="email icon image">
+                    </a>
+                    <a class="location_img" href="https://goo.gl/maps/8EXjbuJDmLUvk7nMA">
+                        <img src="\static\imgs\location.png" alt="location icon image">
+                    </a>
+                    <h6><a class="link" style="font-size:large" href="/contact" alt="contact page link">Contact us</a>
+                        for a quote today!</h6>
+                </div>
             </div>
         </div>
+    </div>
 
     <!--burger navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary ">
@@ -59,37 +61,123 @@
                         <a class="nav-link mx-5 underlineAnimate" href="/gallery">Gallery</a>
                     </li> -->
                     <li class="nav-item">
-                        <a class="nav-link active mx-5 underlineAnimate" aria-current="page" href="">Contact Us/Get Quote</a>
+                        <a class="nav-link active mx-5 underlineAnimate" aria-current="page" href="">Contact Us/Get
+                            Quote</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
+    <!-- main page content ------------------------------------ -->
     <div class="container">
-        <div class="container row mt-5">
-            <!-- contact form -->
-            <div class="form col-md-4 col-12 p-2 mx-auto">
-                {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                    <ul class=flashes>
-                    {% for message in messages %}
-                    <li>{{ message }}</li>
-                    {% endfor %}
+        <div class="row main_page_content">
+            <!-- semi side bar area on main page ---------------- -->
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 main_side">
+                <div class="main_contact">
+                    <h1>Contact Us</h1>
+                    <p>
+                        <strong>CANS R US, LLC</strong>
+                        <br>
+                        11575 230th Ave
+                        <br>
+                        Pierz, MN 56364
+                    </p>
+
+                    <p>
+                        <strong>Phone:</strong> 320.547.2478
+                        <br>
+                        <strong>Email:</strong> <a class="link"
+                            href="mailto:greg@cansrusllc.com">greg@cansrusllc.com</a>
+                    </p>
+
+                    <p>
+                        <strong>Hours:</strong>
+                        <br>
+                        Monday - Friday: 7am - 5pm
+                        <br>
+                        Saturday & Sunday: Please Call
+                    </p>
+                </div>
+                <div class="certifications">
+
+                    <h1>Our Certifications</h1>
+                    <ul>
+                        <li>Licensed</li>
+                        <li>Bonded</li>
+                        <li>Insured</li>
+                        <li>MPCA Employee Certified (Minnesota Pollution Control Agency)
+                        </li>
                     </ul>
-                {% endif %}
-                {% endwith %}
-                <form action="/submit" method="post" >
-                    <label for="name">Name:</label>
-                    <input class="form-control" type="text" name="name">
-                    <label class="mt-2" for="email">Email:</label>
-                    <input class="form-control" type="email" name="email">
-                    <label class="mt-2" for="phone">Phone Number:</label>
-                    <input class="form-control" type="phone" name="phone">
-                    <label class="mt-2" for="message">Message:</label>
-                    <textarea class="form-control" name="message" rows="3"></textarea>
-                    <button class="btn btn-danger mt-3 d-block mx-auto">Submit</button>
-                </form>
+                </div>
+            </div>
+
+            <!-- actual main content area on main page ------------------->
+            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 main_content">
+                <h1>
+                    <center>Request a Quote on Our Portable Toilet Services</center>
+                </h1>
+                <br>
+                <p>Looking for personalized service? Need timely delivery or emergency service now? Want to host an
+                    event AND offer clean restroom facilities? You need us!
+                </p>
+                </p>
+                At CANS R US, LLC, portable toilet rental
+                and related services are all we do. There's no waiting for the garbage hauler to finish his shift
+                or for the septic contractor to finish pumping a tank, there’s just good old fashioned personal
+                service when you need it at competitive prices you can afford.
+                </p>
+
+                <!-- contact form -->
+                <div class="form border needs-validation p-3 mt-5" novalidate>
+                    {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                    <ul class="flashes">
+                        {% for message in messages %}
+                        <li>{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                    {% endwith %}
+
+                    <h2>
+                        Contact Form
+                    </h2>
+                    <p>
+                        *Indicates Required Field
+                    </p>
+                    <form class="row g-3" action="/submit" method="post">
+                        <div class="col-md-6">
+                            <label for="first_name" class="form-label">*First Name</label>
+                            <input type="text" class="form-control" name="first_name" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="last_name" class="form-label">*Last Name</label>
+                            <input type="text" class="form-control" name="last_name" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="email" class="form-label">*Email</label>
+                            <input type="email" class="form-control" name="email" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="phone" class="form-label">*Phone: (###-###-####)</label>
+                            <input type="phone" class="form-control" name="phone" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="area" class="form-label">*Delivery Area</label>
+                            <input type="text" class="form-control" name="area" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="date" class="form-label">*Delivery Date</label>
+                            <input type="date" class="form-control" name="date" required>
+                        </div>
+                        <div class="col-md-12">
+                            <label for="comments" class="form-label">Question or Comments</label>
+                            <textarea class="form-control" name="comments" rows="3"></textarea>
+                        </div>
+                        <button class="btn mx-auto">Submit</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
